--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
             <version>4.1.34.Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
